Image and Hyperlink

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
      </title>
    <head>
     <body bgcolor="#b0b8a9" text="#ff0000" background="flower.jpg">
+
+        <a href="https://youtube.com" target="_blank">Youtube</a> |
+  <a href="https://facebook.com" target="_blank">Facebook</a> |
+  <a href="index.html">Home</a> |
+  <a href="images.html">Images</a> |
+  <a href="contact.html">Contact</a> 
+
+  <br/>
       <h1>Welcome</h1>
       <p>This is my frist webpage</p>
       <p> This is another Paragraph</p>
@@ -15,5 +23,157 @@
 <h4>My Heading</h4>
 <h5>My Heading</h5>
 <h6>My Heading</h6>
-     </body>
+<p> The British College strives to be a world-class college in Nepal offering British and international qualifications equipping our graduates with the knowledge, skills and values they need for success in the global job market and becoming creative entrepreneurs. In this regard we have a distinctive identity as the pioneering global college in Nepal. We offer reputed UK degrees and courses which are relevant to the current job market, enhancing each and every student’s employability.
+</p>
+<hr noshade="noshade">
+<hr width="90%" align="center" color="red" size="5" />
+
+<font size="4" color="Green" face="MV Boli">
+<p align="justify">
+
+ The British College strives to be a world-class college in Nepal offering British and international qualifications equipping our graduates with the knowledge, skills and values they need for success in the global job market and becoming creative entrepreneurs. In this regard we have a distinctive identity as the pioneering global college in Nepal.
+ <span style="color:#ff0000; font-variant: small-caps;">
+  We offer reputed UK degrees
+</span>
+ and courses which are relevant to the current job market, enhancing each and every student’s employability.
+</p>
+<br/>
+<br/></font>
+
+
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; The British College strives to be a world-class         college in Nepal offering British and international qualifications equipping our graduates with the knowledge, skills and values they need for success in the global job market and becoming creative entrepreneurs. In this regard we have a distinctive identity as the pioneering global college in Nepal. We offer reputed UK degrees and courses which are relevant to the current job market, enhancing each and every student’s employability.
+<code>
+The British College </code> strives to be a world-class college in Nepal offering British and international qualifications equipping our graduates with the knowledge, skills and values they need for success in the global job market and becoming creative entrepreneurs. In this regard we have a distinctive identity as the pioneering global college in Nepal. We offer reputed 
+<b><i>UK degrees</i></b> 
+and courses <u>which are relevant </u>to the current job market, enhancing each and every <b>student’s</b> 
+employability.
+</p>
+
+(a+b)<sup>2</sup>
+<br/>
+H<sub>2</sub>O
+<q>THis is itest</q>
+<br/>
+<small>THis is mall text</small><br/>
+<strong>This is equal to b tag</stong><br/>
+<em>THis is equal to i tag</em><br/>
+<i>THis is equal to em tag</i><br/>
+<s>Pls check this one</s><br/>
+<strike>Pls check this is same as s tag</strike><BR/>
+<hr/>
+<del>Strike Through</del><br/>
+
+<hr/>
+
+<pre>
+SN	Name		Address
+1. 	Nischal		Kathmandu
+2. 	Garima		Kathmandu
+3.  	Raban		Kathmandu
+</pre>
+<hr/>
+
+
+<!-- List-->
+<!-- unorder list
+	# it will support type attributes
+	type="disc/circle/square"
+   <ul>   
+	   <li>  .. </li>
+	   <li>  .. </li>
+   </ul>
+-->
+<h2>Students List</h2>
+  <ul type="square">
+  		<li>Anugya Sharma</li>
+  		<li>Anzeela Giri</li>
+  		<li>Aprameya Neoupane</li>
+  		<li>Arjun Ray</li>
+  </ul>
+
+<!-- order list-->
+<!-- 
+	 type="1/a/A/i/I"
+	 start="number"
+	 <ol>
+        <li> .....   </li>
+        <li> .....   </li>
+        <li> .....   </li>
+        <li> .....   </li>
+     <ol>
+     -->
+
+  <h2>Students List</h2>
+  <ol type="i">
+  		<li>Anugya Sharma</li>
+  		<li>Anzeela Giri</li>
+  		<li>Aprameya Neoupane</li>
+  		<li>Arjun Ray</li>
+  </ol>
+
+  <!-- Defination LIst
+  	  <dl>
+  	  	<dt>-----<dt>
+  	  	<dd>-----</dd>
+  	  	<dt>-----<dt>
+  	  	<dd>-----</dd>
+  	  </dl>
+  	-->
+
+  	<dl>
+  		<dt>Computer</dt>
+  		<dd>A computer is an electronic deveice which can get the inpusts, process then and give the output as per the users input.
+  		</dd>
+
+  		<dt>CPU</dt>
+  		<dd>Central Processing UNit</dd>
+  	</dl>
+
+  	<!-- Nesting List-->
+  	<ul>
+  		<li>Pradesh 1</li>
+  		<li>Pradesh 2</li>
+  		<li>Bagmati Pradesh
+  			<ol>
+  				<li>Kathmandu
+  					<ul>
+  						<li>Thapathali</li>
+  						<li>Baneshwor</li>
+  						<li>Gaushala</li>
+  						<li>Chabahil</li>
+  						<li>Maharajung</li>
+  						
+  					</ul>
+  				</li>
+  				<li>Lalitpur</li>
+  				<li>Bhaktapur</li>
+  				<li>Sindhupalchok</li>
+  				<li>Nuwakot</li>
+   			</ol>
+  		</li>
+  		<li>Gandaki Pradesh</li>
+  		<li>Pradesh 5</li>
+  		<li>Karnali Pradesh</li>
+  		<li>Sudur Paschhim Pradesh</li>
+  	</ul>
+<div align="center">
+	<h1>My Header</h1>
+</div>
+<div>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+</p>
+</div>
+<div align="right">
+	<hr/>
+	&copy; 2020, mysite.com<sup>&reg;</sup> All right reserved
+	<sup>&trade;</sup> 
+</div>
+
+
+</body>
 </html>
