table rowspan colspan

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
      </title>
    <head>
     <body bgcolor="#b0b8a9" text="#ff0000" background="flower.jpg">
+      <a name="top"></a>
 
         <a href="https://youtube.com" target="_blank">Youtube</a> |
   <a href="https://facebook.com" target="_blank">Facebook</a> |
   <a href="index.html">Home</a> |
   <a href="images.html">Images</a> |
   <a href="contact.html">Contact</a> 
+  <a href="index.html#studentlist">Student List</a>
+  <a href="mailto:info@drpoudel.com.np">Email Us</a>
 
   <br/>
       <h1>Welcome</h1>
@@ -83,6 +86,8 @@ SN	Name		Address
 	   <li>  .. </li>
    </ul>
 -->
+
+<a name="studentlist"></a>
 <h2>Students List</h2>
   <ul type="square">
   		<li>Anugya Sharma</li>
@@ -172,6 +177,7 @@ SN	Name		Address
 	<hr/>
 	&copy; 2020, mysite.com<sup>&reg;</sup> All right reserved
 	<sup>&trade;</sup> 
+  <p align="right"> <a href="#top">GOTO TOP</a></p>
 </div>
 
 
