--- a/download.html
+++ b/download.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Tables</title>
+	<title>Download</title>
 </head>
 <body bgcolor="#cccccc">
 
@@ -34,7 +34,7 @@
         </tr>
         <tr>
             <td height="400" valign="top">
-                main Content will be here.
+                Download content will be here
             </td>
         </tr>
         <tr>
@@ -42,48 +42,5 @@
             </td>
         </tr>
     </table>
-
-
-
-
-    <table bgcolor="#eeccee" border="1" cellspacing="10" cellpadding="10" width="960px" align="center">
-
-    	<caption align="bottom">Name list of students</caption>	
-    	<tr>
-    		<th>SN</th>
-    		<th>Name</th>
-    		<th>Address</th>
-    	</tr>
-    	<tr>
-    		<td>1</td>
-    		<td>Anugya Sharma</td>
-    		<td>Kathmandu</td>
-    	</tr>
-    	<tr>
-    		<td>2</td>
-    		<td>Aparmeya Neoupane</td>
-    		<td>Kathmandu</td>
-    	</tr>
-    </table>
-
-
-    <table border="1">
-    	<tr>
-    		<td colspan="2">Banner</td>
-    	</tr>
-    	<tr>
-    		<td colspan="2">TOP Menu</td>
-    	</tr>
-    	<tr>
-    		<td>Left Side Bar</td>
-    		<td>Main Content</td>
-    	</tr>
-    	<tr>
-    		<td colspan="2">
-    		Footer
-    		</td>
-    	</tr>
-    </table>
-
 </body>
 </html>
