--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Contact </title>
+	<link rel="stylesheet" type="text/css" href="styles/styles.css" />
 </head>
 <body>
 	<img src="images/banner.jpg" alt="Banner" title="Banner"/>
