--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
    <head>
      <title>
        My First Page
+       <link rel="stylesheet" type="text/css" href="styles/styles.css" />
      </title>
    <head>
     <body bgcolor="#b0b8a9" text="#ff0000" background="flower.jpg">
