--- a/registration.html
+++ b/registration.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<title>Registration</title>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css" />
 </head>
-<body bgcolor="#cccccc">
+<body>
 
     <table border="0" width="960px" align="center" callpadding="0px" cellspacing="0px">
         <tr>
