--- a/images.html
+++ b/images.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Images </title>
+	<link rel="stylesheet" type="text/css" href="styles/styles.css" />
 </head>
 <body>
 	<img src="images/banner.jpg" alt="Banner" title="Banner"/>
