--- a/table.html
+++ b/table.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Tables</title>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css" />
 </head>
 <body bgcolor="#cccccc">
 
