color, font, border, box model

--- a/cssdetails.html
+++ b/cssdetails.html
@@ -2,6 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles/styles.css"/>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium Web">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
     <title>Document</title>
     <style>
         h2{color:green;}
@@ -30,6 +33,10 @@
         <h3 class="bbottomp">My Heading 3</h3>
         <p class="bbottomp">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur porro culpa tempora amet odio facere nam eveniet pariatur suscipit sit repellat repudiandae odit asperiores illo, nemo officia deserunt accusamus nesciunt?</p>
 
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At vero eius nisi quasi earum obcaecati, consequatur sint totam ad et vel aut? Nobis minus quas dignissimos ducimus deleniti, quasi sunt!</p>
+
+        <div class="box">The content goes here</div>
 
         <div id="footer">
             <h1>MYSITE.COM</h1>
