--- a/sitelayout.html
+++ b/sitelayout.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="container">
+        <header>
         <div class="row">
             <div class="col100"><h1>Welcome to the site</h1></div>
         </div>
@@ -25,15 +26,22 @@
                 </nav>
             </div>
         </div>
+    </header>
+    <main>
         <div class="row">
             <div class="col75">Slider 1</div>
             <div class="col25">Thumbnails</div> 
         </div>
+        <!--
+        <div id="notice">Then content will be here....</div>-->
         <div class="row">
-            <div class="col25"><div class="box270"> Column 1 </div></div>
-            <div class="col25"><div class="box270"> Column 1 </div></div>
-            <div class="col25"><div class="box270"> Column 1 </div></div>
-            <div class="col25"><div class="box270"> Column 1 </div></div>
+            <div class="col25"><div class="box270"> <div class="box">Column 1</div> </div></div>
+            <div class="col25">
+                <div class="box270 auto" >
+                <d
+                <h2>Column 2</h2><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt dolores, mollitia sint neque eos veritatis numquam velit omnis, perferendis ipsa ipsum dignissimos voluptate! Exercitationem, id consequuntur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti eligendi alias minima rem dolorem! Eos libero totam sequi voluptatibus! Quo adipisci natus blanditiis vel ea doloremque numquam reiciendis ratione repellendus. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, hic temporibus ea in autem nobis esse nisi quibusdam. Similique ut dolorum libero quod? Commodi error delectus blanditiis, quos sequi officiis!</p> </div></div>
+            <div class="col25"> <h2>Column 3</h2><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt dolores, mollitia sint neque eos veritatis numquam velit omnis, perferendis ipsa ipsum dignissimos voluptate! Exercitationem, id consequuntur. Voluptate quis perspiciatis  consequuntur voluptatibus. Voluptate et praesentium totam?</p> </div>
+            <div class="col25"> <h2>Column 4</h2><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt dolores, mollitia sint neque eos veritatis numquam velit omnis, perferendis ipsa </p> </div>
         </div>
 
         <div class="row">
@@ -41,9 +49,18 @@
             <div class="col33">Part 2</div>
             <div class="col33">Part 3</div>            
         </div>
+
+    </main>
+    <footer>
         <div class="row">
             <div class="col100">Footer will be here</div>
         </div>
+    </footer>
+
+
+       
     </div><!-- containmer-->
+
+    <div id="social"></div>
 </body>
 </html>
