JavaScript functtions and Live Clock

--- a/sitelayout.html
+++ b/sitelayout.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium Web">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
     <title>Layout</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
     <div id="container">
@@ -29,25 +30,33 @@
     </header>
     <main>
         <div class="row">
-            <div class="col75">Slider 1</div>
-            <div class="col25">Thumbnails</div> 
+            <div class="col75 coltab50 colmob100">Slider 1</div>
+            <div class="col25 coltab50 colmob100">Thumbnails</div> 
         </div>
         <!--
         <div id="notice">Then content will be here....</div>-->
         <div class="row">
-            <div class="col25"><div class="box270"> <div class="box">Column 1</div> </div></div>
-            <div class="col25">
+            <div class="col25 coltab50 colmob100"><div class="box270"> <div class="box">
+                <img src="images/car1.png" class="responsive" alt="car1"/>Column 1</div> </div></div>
+            <div class="col25 coltab50 colmob100">
                 <div class="box270 auto" >
-                <d
+                </div>
+                <img src="images/car1.png" class="responsive" alt="car1"/>
                 <h2>Column 2</h2><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt dolores, mollitia sint neque eos veritatis numquam velit omnis, perferendis ipsa ipsum dignissimos voluptate! Exercitationem, id consequuntur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti eligendi alias minima rem dolorem! Eos libero totam sequi voluptatibus! Quo adipisci natus blanditiis vel ea doloremque numquam reiciendis ratione repellendus. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, hic temporibus ea in autem nobis esse nisi quibusdam. Similique ut dolorum libero quod? Commodi error delectus blanditiis, quos sequi officiis!</p> </div></div>
-            <div class="col25"> <h2>Column 3</h2><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt dolores, mollitia sint neque eos veritatis numquam velit omnis, perferendis ipsa ipsum dignissimos voluptate! Exercitationem, id consequuntur. Voluptate quis perspiciatis  consequuntur voluptatibus. Voluptate et praesentium totam?</p> </div>
-            <div class="col25"> <h2>Column 4</h2><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt dolores, mollitia sint neque eos veritatis numquam velit omnis, perferendis ipsa </p> </div>
+            <div class="col25 coltab50 colmob100"><img src="images/car1.png" class="responsive" alt="car1"/>
+                 <h2>Column 3</h2><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt dolores, mollitia sint neque eos veritatis numquam velit omnis, perferendis ipsa ipsum dignissimos voluptate! Exercitationem, id consequuntur. Voluptate quis perspiciatis  consequuntur voluptatibus. Voluptate et praesentium totam?</p> </div>
+            <div class="col25 coltab50 colmob100">
+                <img src="images/car1.png" class="responsive" alt="car1"/> <h2>Column 4</h2><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt dolores, mollitia sint neque eos veritatis numquam velit omnis, perferendis ipsa </p> </div>
         </div>
 
         <div class="row">
-            <div class="col33">Part 1</div>
-            <div class="col33">Part 2</div>
-            <div class="col33">Part 3</div>            
+            <div class="col33 coltab50 colmob100">Part 1<img src="images/car1.png" class="responsive" alt="car1"/>
+            </div>
+            <div class="col33 coltab50 colmob100">Part 2<img src="images/car1.png" class="responsive" alt="car1"/>
+            </div>
+            <div class="col33 coltab50 colmob100">Part 3
+                <img src="images/car1.png" class="responsive" alt="car1"/>
+            </div>            
         </div>
 
     </main>
